--- a/CalculPartsHeritage/Views/Home/_Bibliotheque.cshtml
+++ b/CalculPartsHeritage/Views/Home/_Bibliotheque.cshtml
@@ -2,14 +2,14 @@
 <div class="row">
     <div class="col-6">
         <ul class="list-group-item" id="item">
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/non-heirs-and-impediments-to.html">Non héritiers et empêchements de succession</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/08/female-heirs.html">Héritières</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/08/male-heirs.html">Héritiers mâles</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion.html">Exclusion</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion-2.html">Un fils exclut tous les petits-enfants</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion-2.html">Une fille n'exclut pas les petits-enfants</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion-3.html">ordre d"arrangement des exclusions</a></li>
-            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/non-heirs-and-impediments-to.html">Mort simultanée</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/non-heirs-and-impediments-to.html" target="_blank">Non héritiers et empêchements de succession</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/08/female-heirs.html" target="_blank">Héritières</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/08/male-heirs.html" target="_blank">Héritiers mâles</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion.html" target="_blank">Exclusion</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion-2.html" target="_blank">Un fils exclut tous les petits-enfants</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion-2.html" target="_blank">Une fille n'exclut pas les petits-enfants</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/exclusion-3.html" target="_blank">ordre d"arrangement des exclusions</a></li>
+            <li class="item"><a href="http://inheritanceinislam.blogspot.com/2011/09/non-heirs-and-impediments-to.html" target="_blank">Mort simultanée</a></li>
         </ul>
     </div>
     <div class="col-6">
