--- a/CalculPartsHeritage/Views/Shared/_Layout.cshtml
+++ b/CalculPartsHeritage/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container">
             <span class="navbar-brand js-scroll-trigger">
-                @Html.ActionLink("Heritage", "Index")
+                @Html.ActionLink("Accueil", "Index", "Home")
             </span>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
@@ -25,16 +25,16 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="http://islamsunnite.net/biographie-imam-malik/">Imam Malicke</a>
+                        <a class="nav-link js-scroll-trigger" target="_blank" href="http://islamsunnite.net/biographie-imam-malik/">Imam Malicke</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="http://islamsunnite.net/biographie-imam-al-boukhari/">Imam Boukhari</a>
+                        <a class="nav-link js-scroll-trigger" target="_blank" href="http://islamsunnite.net/biographie-imam-al-boukhari/">Imam Boukhari</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="http://khadijamine.centerblog.net/13797-biographie-de-imam-ash-shafi-i">Imam Shafy</a>
+                        <a class="nav-link js-scroll-trigger" target="_blank" href="http://khadijamine.centerblog.net/13797-biographie-de-imam-ash-shafi-i">Imam Shafy</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="https://www.apbif.fr/imam-ahmad-biographie/">Imam Ahmad</a>
+                        <a class="nav-link js-scroll-trigger" target="_blank" href="https://www.apbif.fr/imam-ahmad-biographie/">Imam Ahmad</a>
                     </li>
                     <li class="nav-item">
                         <span class="nav-link js-scroll-trigger">
@@ -53,7 +53,7 @@
                 <h1 style="color: #64a19d !important;" class="mx-auto my-0 text-uppercase">LES HERITAGES</h1>
                 <h2 class="text-white-50 mx-auto mt-2 mb-5">En Islam suivant les Imams</h2>
                 <span class="btn btn-warning js-scroll-trigger" color:#000000 ;">
-                    @Html.ActionLink("Bibliotheque", "_Bibliotheque")
+                    @Html.ActionLink("Bibliotheque", "_Bibliotheque", "Home")
                 </span>
             </div>
         </div>
