--- a/CalculPartsHeritage/Views/User/Edit.cshtml
+++ b/CalculPartsHeritage/Views/User/Edit.cshtml
@@ -1,28 +1,28 @@
 ﻿@model CalculPartsHeritage.Models.UTILISATEUR
 
-
 @{
-    ViewBag.Title = "Creation utilisateur";
+    ViewBag.Title = "Edit";
 }
 
-<h2>Create</h2>
+<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Utilisateur</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.LabelFor(model => model.UTILISATEURID, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.UTILISATEURID, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.UTILISATEURID, "", new { @class = "text-danger" })
+    <div class="form-horizontal">
+        <h4>Utilisateur</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.UTILISATEURID)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.UTILISATEURID, new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.UTILISATEURID)
+            </div>
         </div>
-    </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.EMAIL, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -41,15 +41,14 @@
         </div>
 
 
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
-    }
+}
 
-    <div>
-        @Html.ActionLink("Retour", "_Index")
-    </div>
+<div>
+    @Html.ActionLink("Back to List", "_Index")
+</div>
