--- a/CalculPartsHeritage/Views/User/_Index.cshtml
+++ b/CalculPartsHeritage/Views/User/_Index.cshtml
@@ -41,8 +41,7 @@
             
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.UTILISATEURID }) |
-                @Html.ActionLink("Details", "Details", new { id = item.EMAIL }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.DESIGNATION })
+                @Html.ActionLink("Delete", "Delete", new { id = item.UTILISATEURID })
             </td>
         </tr>
     }
